--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -19,6 +19,8 @@
   --input: 214.3 31.8% 91.4%;
   --ring: 221.2 83.2% 53.3%;
   --radius: 0.5rem;
+  --success: 116, 47%, 48%;
+  --success-foreground: 210 40% 98%;
 }
 
 .dark {
@@ -41,4 +43,6 @@
   --border: 217.2 32.6% 17.5%;
   --input: 0, 0%, 100%;
   --ring: 224.3 76.3% 48%;
+  --success: 116, 47%, 48%;
+  --success-foreground: 210 40% 98%;
 }
