--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,9 +12,9 @@
   .decorator {
     background-image: radial-gradient(
         at 0% 100%,
-        hsla(237, 90%, 14%, 1) 0px,
-        transparent 50%
+        hsl(237, 62%, 45%) 0px,
+        transparent 80%
       ),
-      radial-gradient(at 90% 0%, hsla(340, 69%, 11%, 1) 0px, transparent 50%);
+      radial-gradient(at 90% 0%, hsl(339, 61%, 51%) 0px, transparent 70%);
   }
 }
